fixed char banner overflow; adjusted text size
To-do: the area of the weapon banner box needs to be smaller

--- a/web/welcome-page.css
+++ b/web/welcome-page.css
@@ -50,7 +50,7 @@ section {
     display: flex;
     flex-direction: row;
     height: 75%;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .banners .child {
@@ -60,8 +60,25 @@ section {
     padding: 0;
 }
 
-.banners .child img {
-    width: 90%;
+.banners .wbanner {
+    width: fit-content;
+    padding: auto;
+}
+
+.banners .child h4 {
+    font-size: 24px;
+}
+
+.banners .child p {
+    font-size: 24px;
+}
+
+.banners .cbanner-1 img, .banners .cbanner-2 img {
+    height: 75%;
+}
+
+.banners .wbanner img {
+    width: 75%;
 }
 
 img {
@@ -71,6 +88,6 @@ img {
     max-width: 100%;
     max-height: 90%;
     margin: 20px auto;
-    object-fit: cover;
+    object-fit: contain;
   }
 
